hphp/test/zend/bad/ext-spl/fileobject_setmaxlinelen_error003.php
<?php
$s = new SplFileObject( __FILE__ );
$s->setMaxLineLen('string');

?>